# Eval_Policies_CoRL

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/simplerenv/: cogact_base_official.yaml  cogact_base_randomized.yaml
deliverables/: sam_libero_goal_3x5k_raw_20260514T171513Z.archive_sha256.txt
deliverables/sam_libero_goal_3x5k_raw_20260514T171513Z/: MANIFEST.txt  README.txt  SHA256SUMS.txt
eval_policies_corl/: __init__.py
eval_policies_corl/benchmarks/: __init__.py
logs/slurm/: calvin_1seq_val-2048417_0.out  calvin_1seq_val-2048417_1.err  calvin_1seq_val-2048417_1.out  calvin_1seq_val-2048417_2.err  calvin_1seq_val-2048417_2.out  calvin_1seq_val-2048417_3.out  calvin_1seq_val-2048417_4.err  calvin_1seq_val-2048417_4.out  calvin_1seq_val-2048417_5.err  calvin_1seq_val-2048417_5.out  calvin_full_1k-2048456_0.out  calvin_full_1k-2048456_1.out  calvin_full_1k-2048456_10.err  calvin_full_1k-2048456_10.out  calvin_full_1k-2048456_11.err  calvin_full_1k-2048456_11.out  calvin_full_1k-2048456_12.out  calvin_full_1k-2048456_13.out  calvin_full_1k-2048456_14.out  calvin_full_1k-2048456_15.out  calvin_full_1k-2048456_16.err  calvin_full_1k-2048456_16.out  calvin_full_1k-2048456_17.err  calvin_full_1k-2048456_17.out  calvin_full_1k-2048456_18.err  calvin_full_1k-2048456_18.out  calvin_full_1k-2048456_19.err  calvin_full_1k-2048456_19.out  calvin_full_1k-2048456_2.out  calvin_full_1k-2048456_20.err  (+50 more)
patches/: spatial_forcing_libero_artifact_eval.patch  spatial_forcing_libero_artifact_eval.patch.sha256  spatial_forcing_libero_reproduction_manifest.json
(+1419 files in other folders)
